# ifmetrica

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  ifmetrica.json.example  metrics.sql
src/: config.hpp  ifacestate.hpp  main.cpp  utils.hpp
